add news for ijcai

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	  <b>Recent News:</b><br>
 	  <table>
 	  <tbody>
+      <tr><td valign="top">04/16/2018</td> <td>Jianpeng has one paper accepted by <b>IJCAI 2018</b>.</td></tr>	  
       <tr><td valign="top">01/29/2017</td> <td>Jianpeng has one paper accepted by <b>TKDE</b>.</td></tr>	  
       <tr><td valign="top">12/08/2016</td> <td>Jianpeng received the <font color="FF0000"> Best Paper Award </font> from <b>IEEE BigData 2016</b>.</td></tr>
       <tr><td valign="top">10/12/2016</td> <td>Jianpeng has one paper accepted in <b>IEEE BigData 2016</b>.</td></tr>
@@ -160,6 +161,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <h3>S<small>ELECTED</small> P<small>EER</small>-R<small>EVIEWED </small>P<small>UBLICATIONS</small></h3>
     <small>
     <ol> 
+
+    <li><i>MUSCAT: Multi-Scale Spatio-Temporal Learning with Application to Climate Modeling</i><br>
+ 	   	Jianpeng Xu, Xi Liu, Tyler Wilson, Pang-Ning Tan, Pouyan Hatami and Lifeng Luo <br>
+        <b> International Joint Conference on Artificial Intelligence (IJCAI), 2018</b> (<a href="" target="_blank">Paper</a>) [<a href="" target="_blank">Github</a>]
+    </li>
+
+	
     <li><i>Online Multi-task Learning Framework for Ensemble Forecasting</i><br>
  	   	Jianpeng Xu, Pang-Ning Tan, Jiayu Zhou and Lifeng Luo <br>
         <b>IEEE Transactions on Knowledge and Data Engineering (TKDE), 2017</b> (<a href="publications/2017-xu-TKDE-ORION.pdf" target="_blank">Paper</a>) [<a href="https://github.com/Jianpeng-Xu/TKDE-ORION" target="_blank">Github</a>]
