add paper muscat

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <li><i>MUSCAT: Multi-Scale Spatio-Temporal Learning with Application to Climate Modeling</i><br>
  	   	Jianpeng Xu, Xi Liu, Tyler Wilson, Pang-Ning Tan, Pouyan Hatami and Lifeng Luo <br>
-        <b> International Joint Conference on Artificial Intelligence (IJCAI), 2018</b> (<a href="" target="_blank">Paper</a>) [<a href="" target="_blank">Github</a>]
+        <b> International Joint Conference on Artificial Intelligence (IJCAI), 2018</b> (<a href="publications/2018-xu-IJCAI-MUSCAT.pdf" target="_blank">Paper</a>) [<a href="https://github.com/Jianpeng-Xu/IJCAI2018-MUSCAT" target="_blank">Github</a>]
     </li>
 
 	
