--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	  <b>Recent News:</b><br>
 	  <table>
 	  <tbody>
+	  <tr><td valign="top">09/10/2018</td> <td>Jianpeng is invited to present his work on Large-scale Spatio-temporal Prediction via Tensor Decomposition at <b>AMS Fall Western Sectional Meeting</b> in October, 2018.</td></tr>	  
       <tr><td valign="top">04/16/2018</td> <td>Jianpeng has one paper accepted by <b>IJCAI 2018</b>.</td></tr>	  
       <tr><td valign="top">01/29/2017</td> <td>Jianpeng has one paper accepted by <b>TKDE</b>.</td></tr>	  
       <tr><td valign="top">12/08/2016</td> <td>Jianpeng received the <font color="FF0000"> Best Paper Award </font> from <b>IEEE BigData 2016</b>.</td></tr>
