--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <p>
       <big><b>Dr. Jianpeng Xu</b></big><br>
-      Data Scientist @ eBay <br>
+      Data Scientist @ WalmartLabs <br>
       Personal Email: jianpeng.xu@gmail.com <br>
       LinkedIn: <a href="http://www.linkedin.com/pub/jianpeng-xu/27/4b4/a39" target="_blank">
       
@@ -112,7 +112,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <p>
       <b>Short Biography</b><br>
       <small>
-      Jianpeng Xu earned his Ph.D in CSE Department, Michigan State University (MSU) in 2017 Summer, under the supervision of <a href="http://www.cse.msu.edu/~ptan/" target="_blank">Dr. Pang-Ning Tan</a>. He received his MS in Computer Science, Harbin Institute of Technology (HIT) in 2010 and BS in Computer Science, Shandong University (SDU) in 2007. Jianpeng has a broad research interest in Data Mining and Machine Learning, which includes GeoSpatio-temporal data mining, change detection, frequent pattern mining, multi-task learning, online learning, and data mining and machine learning foundamental algorithms and their applications. His thesis topic is Multi-task learning and its application on Spatio-temporal data. He received the <font color="FF0000"> Best Poster Award </font> from Doctoral Forum on SDM 2016 and <font color="FF0000"> Best Paper Award </font> from IEEE BigData 2016. He interned at <a href="http://www.narus.com" target="_blank">Narus (Boeing Inc)</a> in 2012, where he worked on designing data mining algorithm to detect malicious behaviors in network traffic. In summer 2014 and 2015, he interned at <a href="http://www.sra.samsung.com/" target="_blank">Samsung Research America</a> and worked on user behavior and demographics analysis as well as recommender systems for Samsung Smart TV. Jianpeng is currently working at eBay as a Data Scientist. 
+      Jianpeng Xu earned his Ph.D in CSE Department, Michigan State University (MSU) in 2017 Summer, under the supervision of <a href="http://www.cse.msu.edu/~ptan/" target="_blank">Dr. Pang-Ning Tan</a>. He received his MS in Computer Science, Harbin Institute of Technology (HIT) in 2010 and BS in Computer Science, Shandong University (SDU) in 2007. Jianpeng has a broad research interest in Data Mining and Machine Learning, which includes GeoSpatio-temporal data mining, change detection, frequent pattern mining, multi-task learning, online learning, and data mining and machine learning foundamental algorithms and their applications. His thesis topic is Multi-task learning and its application on Spatio-temporal data. He received the <font color="FF0000"> Best Poster Award </font> from Doctoral Forum on SDM 2016 and <font color="FF0000"> Best Paper Award </font> from IEEE BigData 2016. Jianpeng worked at eBay as a Data Scientist from 2016 to 2018. After that, he moved to WalmartLabs as a Senior Data Scientist working on learning-to-rank techniques in the application on recommendation systems and personalization.  
       </small>
     </p>
         
