--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <p>
 	<ul> 
-	<li>Program Committee Member for KDD 2018, IEEE BigData 2018, BIBM 2015, 2016, IJCAI 2015, MLRec 2015, 2016, 2017(in conjunction with SDM), BigTraffic 2018</li>
+	<li>Program Committee Member for KDD 2018, 2019, AAAI 2019, PAKDD 2019, IEEE BigData 2018, 2019, BIBM 2015, 2016, IJCAI 2015, MLRec 2015, 2016, 2017(in conjunction with SDM), BigTraffic 2018</li>
 	<li>Invited Reviewer for Conferences: IJCAI 2016, AAAI 2016, SDM 2015, 2016, WSDM2015, DSAA2015, CIKM2014, DSAA2014, ICDM2014</li>
 	<li>Reviewer for Journals: Neurocomputing, BMC Bioinformatics, TNNLS, Pattern Recognition, EURASIP</li>
 	</ul>
