add smart paper in tkde2019

--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	  <b>Recent News:</b><br>
 	  <table>
 	  <tbody>
+	  <tr><td valign="top">12/07/2019</td> <td>Jianpeng has one paper accepted by TKDE.</td></tr>	  
+
 	  <tr><td valign="top">09/10/2018</td> <td>Jianpeng is invited to present his work on Large-scale Spatio-temporal Prediction via Tensor Decomposition at <b>AMS Fall Western Sectional Meeting</b> in October, 2018.</td></tr>	  
       <tr><td valign="top">04/16/2018</td> <td>Jianpeng has one paper accepted by <b>IJCAI 2018</b>.</td></tr>	  
       <tr><td valign="top">01/29/2017</td> <td>Jianpeng has one paper accepted by <b>TKDE</b>.</td></tr>	  
@@ -162,6 +164,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <h3>S<small>ELECTED</small> P<small>EER</small>-R<small>EVIEWED </small>P<small>UBLICATIONS</small></h3>
     <small>
     <ol> 
+    <li><i>Spatio-temporal Multi-task Learning via Tensor Decomposition</i><br>
+ 	    Jianpeng Xu, Jiayu Zhou, Pang-Ning Tan, Xi Liu, Lifeng Luo <br>
+        <b>IEEE Transactions on Knowledge and Data Engineering (TKDE), 2019</b> (<a href="publications/2019-xu-TKDE-SMART.pdf" target="_blank">Paper</a>)[<a href="https://github.com/Jianpeng-Xu/TKDE-SMART" target="_blank">Github</a>]
+    </li>
 
     <li><i>MUSCAT: Multi-Scale Spatio-Temporal Learning with Application to Climate Modeling</i><br>
  	   	Jianpeng Xu, Xi Liu, Tyler Wilson, Pang-Ning Tan, Pouyan Hatami and Lifeng Luo <br>
@@ -340,6 +346,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <a href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=zmw:48823.1.99999&bannertypeclick=wu_bluestripes" title="Get latest Weather Forecast updates" style="font-family: sans-serif; font-size: 12px" target="_blank">Click for weather forecast</a></span></td>
   </tr>
 </table>
-<p> Last updated on Dec 2016</p>
+<p> Last updated on October 2019</p>
 </body>
 </html>
