update news and bio

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <p>
       <b>Short Biography</b><br>
       <small>
-      Jianpeng Xu earned his Ph.D in CSE Department, Michigan State University (MSU) in 2017 Summer, under the supervision of <a href="http://www.cse.msu.edu/~ptan/" target="_blank">Dr. Pang-Ning Tan</a>. He received his MS in Computer Science, Harbin Institute of Technology (HIT) in 2010 and BS in Computer Science, Shandong University (SDU) in 2007. Jianpeng has a broad research interest in Data Mining and Machine Learning, which includes GeoSpatio-temporal data mining, change detection, frequent pattern mining, multi-task learning, online learning, and data mining and machine learning foundamental algorithms and their applications. His thesis topic is Multi-task learning and its application on Spatio-temporal data. He received the <font color="FF0000"> Best Poster Award </font> from Doctoral Forum on SDM 2016 and <font color="FF0000"> Best Paper Award </font> from IEEE BigData 2016. Jianpeng worked at eBay as a Data Scientist from 2016 to 2018. After that, he moved to WalmartLabs as a Senior Data Scientist working on learning-to-rank techniques in the application on recommendation systems and personalization.  
+        Jianpeng Xu is currently a Senior Data Scientist at WalmartLabs, focusing on the development and performance improvement of the item page recommendation/personalization models. Before joining WalmartLabs, Jianpeng worked at eBay on price optimization, timeseries forecasting and anomaly detection for eCommerce metrics. Jianpeng Xu earned his Ph.D in CSE Department, Michigan State University (MSU) in 2017 Summer, under the supervision of <a href="http://www.cse.msu.edu/~ptan/" target="_blank">Dr. Pang-Ning Tan</a>. He received his MS in Computer Science, Harbin Institute of Technology (HIT) in 2010 and BS in Computer Science, Shandong University (SDU) in 2007. Jianpeng has a broad research interest in Data Mining and Machine Learning, which includes GeoSpatio-temporal data mining, anomaly detection, multi-task learning, online learning, and AI algorithms and their applications. He received the <font color="FF0000"> Best Poster Award </font> from Doctoral Forum on SDM 2016 and <font color="FF0000"> Best Paper Award </font> from IEEE BigData 2016. Jianpeng served as Program Committee members for multiple prestigious data mining and machine learning conferences and was invited as reviewers for Journals such as TKDE, TNNLS and Pattern Recognition. He is also serving as a co-organizer for the 1st International Workshop on Industrial Recommendation Systems. 
       </small>
     </p>
         
@@ -127,13 +127,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	  <b>Recent News:</b><br>
 	  <table>
 	  <tbody>
+    <tr><td valign="top">08/01/2020</td> <td>Jianpeng is co-organizing <a href="https://irsworkshop.github.io/2020/index.html" target="_blank">the 1st International Workshop on Industrial Recommendation Systems </a>.</td></tr>   
 	  <tr><td valign="top">12/07/2019</td> <td>Jianpeng has one paper accepted by TKDE.</td></tr>	  
-
 	  <tr><td valign="top">09/10/2018</td> <td>Jianpeng is invited to present his work on Large-scale Spatio-temporal Prediction via Tensor Decomposition at <b>AMS Fall Western Sectional Meeting</b> in October, 2018.</td></tr>	  
       <tr><td valign="top">04/16/2018</td> <td>Jianpeng has one paper accepted by <b>IJCAI 2018</b>.</td></tr>	  
       <tr><td valign="top">01/29/2017</td> <td>Jianpeng has one paper accepted by <b>TKDE</b>.</td></tr>	  
       <tr><td valign="top">12/08/2016</td> <td>Jianpeng received the <font color="FF0000"> Best Paper Award </font> from <b>IEEE BigData 2016</b>.</td></tr>
-      <tr><td valign="top">10/12/2016</td> <td>Jianpeng has one paper accepted in <b>IEEE BigData 2016</b>.</td></tr>
       <tr><td valign="top">05/12/2016</td> <td>Jianpeng received <font color="FF0000"> Best Poster Award </font> from Doctoral Forum in <b>SDM 2016</b>.</td></tr>
 	  
     <!--  <tr><td valign="top">01/12/2016</td> <td>Jianpeng has two papers accepted in <b>SDM 2016</b>.</td></tr>
@@ -254,9 +253,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <p>
 	<ul> 
-	<li>Program Committee Member for KDD 2018, 2019, AAAI 2019, PAKDD 2019, IEEE BigData 2018, 2019, BIBM 2015, 2016, IJCAI 2015, MLRec 2015, 2016, 2017(in conjunction with SDM), BigTraffic 2018</li>
-	<li>Invited Reviewer for Conferences: IJCAI 2016, AAAI 2016, SDM 2015, 2016, WSDM2015, DSAA2015, CIKM2014, DSAA2014, ICDM2014</li>
-	<li>Reviewer for Journals: Neurocomputing, BMC Bioinformatics, TNNLS, Pattern Recognition, EURASIP</li>
+  <li>Workshop Organizer: <a href="https://irsworkshop.github.io/2020/index.html" target="_blank"> IRS2020 (with KDD2020) </a> </li> 
+	<li>Program Committee Member for KDD 2018, 2019, 2020, NeurIPS 2020, AAAI 2019, PAKDD 2019, IEEE BigData 2018, 2019, BIBM 2015, 2016, IJCAI 2015, MLRec 2015, 2016, 2017(in conjunction with SDM), BigTraffic 2018</li>
+	<!-- <li>Invited Reviewer for Conferences: IJCAI 2016, AAAI 2016, SDM 2015, 2016, WSDM2015, DSAA2015, CIKM2014, DSAA2014, ICDM2014</li> -->
+	<li>Reviewer for Journals: TKDE, TNNLS, Pattern Recognition, Neurocomputing, BMC Bioinformatics, EURASIP</li>
 	</ul>
     
     </p>
