--- a/index.html
+++ b/index.html
@@ -163,6 +163,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <h3>S<small>ELECTED</small> P<small>EER</small>-R<small>EVIEWED </small>P<small>UBLICATIONS</small></h3>
     <small>
     <ol> 
+    <li><i>PURE: Positive-Unlabeled Recommendation with Generative Adversarial Network</i><br>
+      Yao Zhou, Jianpeng Xu, Jun Wu, Zeinab Taghavi Nasrabadi, Evren Korpeoglu, Kannan Achan, Jingrui He <br>
+        <b>KDD2021</b> (<a href="publications/2021-zhou-KDD-PURE.pdf" target="_blank">Paper</a>)[<a href="" target="_blank">Github</a>]
+    </li>
+
     <li><i>Spatio-temporal Multi-task Learning via Tensor Decomposition</i><br>
  	    Jianpeng Xu, Jiayu Zhou, Pang-Ning Tan, Xi Liu, Lifeng Luo <br>
         <b>IEEE Transactions on Knowledge and Data Engineering (TKDE), 2019</b> (<a href="publications/2019-xu-TKDE-SMART.pdf" target="_blank">Paper</a>)[<a href="https://github.com/Jianpeng-Xu/TKDE-SMART" target="_blank">Github</a>]
