--- a/index.html
+++ b/index.html
@@ -127,13 +127,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	  <b>Recent News:</b><br>
 	  <table>
 	  <tbody>
-    <tr><td valign="top">08/01/2020</td> <td>Jianpeng is co-organizing <a href="https://irsworkshop.github.io/2020/index.html" target="_blank">the 1st International Workshop on Industrial Recommendation Systems </a>.</td></tr>   
-	  <tr><td valign="top">12/07/2019</td> <td>Jianpeng has one paper accepted by TKDE.</td></tr>	  
+    <tr><td valign="top">08/15/2021</td> <td>Jianpeng has one paper accepted by <b>KDD2021</b>.</td></tr>    
+    <tr><td valign="top">08/01/2021</td> <td>Jianpeng is co-organizing <a href="https://irsworkshop.github.io/2021/index.html" target="_blank">the 2nd International Workshop on Industrial Recommendation Systems</a>.</td></tr>   
+    <tr><td valign="top">07/01/2021</td> <td>Jianpeng is co-organizing <a href="https://sites.google.com/view/rlfeca2021" target="_blank">ICML 2021 Workshop on Representation Learning for Finance and e-Commerce Applications</a>.</td></tr>   
+    <tr><td valign="top">08/01/2020</td> <td>Jianpeng is co-organizing <a href="https://irsworkshop.github.io/2020/index.html" target="_blank">the 1st International Workshop on Industrial Recommendation Systems</a>.</td></tr>   
+	  <tr><td valign="top">12/07/2019</td> <td>Jianpeng has one paper accepted by <b>TKDE</b>.</td></tr>	  
 	  <tr><td valign="top">09/10/2018</td> <td>Jianpeng is invited to present his work on Large-scale Spatio-temporal Prediction via Tensor Decomposition at <b>AMS Fall Western Sectional Meeting</b> in October, 2018.</td></tr>	  
       <tr><td valign="top">04/16/2018</td> <td>Jianpeng has one paper accepted by <b>IJCAI 2018</b>.</td></tr>	  
       <tr><td valign="top">01/29/2017</td> <td>Jianpeng has one paper accepted by <b>TKDE</b>.</td></tr>	  
-      <tr><td valign="top">12/08/2016</td> <td>Jianpeng received the <font color="FF0000"> Best Paper Award </font> from <b>IEEE BigData 2016</b>.</td></tr>
-      <tr><td valign="top">05/12/2016</td> <td>Jianpeng received <font color="FF0000"> Best Poster Award </font> from Doctoral Forum in <b>SDM 2016</b>.</td></tr>
+      <!-- <tr><td valign="top">12/08/2016</td> <td>Jianpeng received the <font color="FF0000"> Best Paper Award </font> from <b>IEEE BigData 2016</b>.</td></tr>
+      <tr><td valign="top">05/12/2016</td> <td>Jianpeng received <font color="FF0000"> Best Poster Award </font> from Doctoral Forum in <b>SDM 2016</b>.</td></tr> -->
 	  
     <!--  <tr><td valign="top">01/12/2016</td> <td>Jianpeng has two papers accepted in <b>SDM 2016</b>.</td></tr>
 
@@ -258,7 +261,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <p>
 	<ul> 
-  <li>Workshop Organizer: <a href="https://irsworkshop.github.io/2020/index.html" target="_blank"> IRS2020 (with KDD2020) </a> </li> 
+  <li>Workshop Organizer: <a href="https://irsworkshop.github.io/2020" target="_blank"> IRS2020@KDD </a>, 
+                          <a href="https://irsworkshop.github.io/2021" target="_blank"> IRS2021@KDD </a>, 
+                          <a href="https://sites.google.com/view/rlfeca2021" target="_blank"> ICML Workshop on Representation Learning for Finance and e-Commerce Applications </a>
+  </li> 
 	<li>Program Committee Member for KDD 2018, 2019, 2020, NeurIPS 2020, AAAI 2019, PAKDD 2019, IEEE BigData 2018, 2019, BIBM 2015, 2016, IJCAI 2015, MLRec 2015, 2016, 2017(in conjunction with SDM), BigTraffic 2018</li>
 	<!-- <li>Invited Reviewer for Conferences: IJCAI 2016, AAAI 2016, SDM 2015, 2016, WSDM2015, DSAA2015, CIKM2014, DSAA2014, ICDM2014</li> -->
 	<li>Reviewer for Journals: TKDE, TNNLS, Pattern Recognition, Neurocomputing, BMC Bioinformatics, EURASIP</li>
@@ -351,6 +357,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <a href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=zmw:48823.1.99999&bannertypeclick=wu_bluestripes" title="Get latest Weather Forecast updates" style="font-family: sans-serif; font-size: 12px" target="_blank">Click for weather forecast</a></span></td>
   </tr>
 </table>
-<p> Last updated on October 2019</p>
+<p> Last updated on August 2021</p>
 </body>
 </html>
