--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <p>
       <big><b>Dr. Jianpeng Xu</b></big><br>
-      Data Scientist @ WalmartLabs <br>
+      Data Scientist @ Walmart Global Tech (Former WalmartLabs) <br>
       Personal Email: jianpeng.xu@gmail.com <br>
       LinkedIn: <a href="http://www.linkedin.com/pub/jianpeng-xu/27/4b4/a39" target="_blank">
       
@@ -112,7 +112,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <p>
       <b>Short Biography</b><br>
       <small>
-        Jianpeng Xu is currently a Staff Data Scientist at WalmartLabs, focusing on the development and performance improvement of the item page recommendation and personalization models. Before joining WalmartLabs, Jianpeng worked at eBay on deals optimization, timeseries forecasting and anomaly detection for eCommerce metrics. Jianpeng Xu earned his Ph.D in CSE Department, Michigan State University (MSU) in 2017 Summer, under the supervision of <a href="http://www.cse.msu.edu/~ptan/" target="_blank">Dr. Pang-Ning Tan</a>. He received his MS in Computer Science, Harbin Institute of Technology (HIT) in 2010 and BS in Computer Science, Shandong University (SDU) in 2007. Jianpeng has a broad research interest in Data Mining and Machine Learning, which includes GeoSpatio-temporal data mining, anomaly detection, multi-task learning, online learning, and AI algorithms and their applications. He received the <font color="FF0000"> Best Poster Award </font> from Doctoral Forum on SDM 2016 and <font color="FF0000"> Best Paper Award </font> from IEEE BigData 2016. Jianpeng served as Program Committee members for multiple prestigious data mining and machine learning conferences and was invited as reviewers for Journals such as TKDE, TKDD, TNNLS and Pattern Recognition. He served as co-organizers for multiple workshops in recommender systems and information retrieval domains. He is also the Topic Editor for Research Topic on Industrial Recommender Systems, Journal of Frontiers in Big Data. 
+        Jianpeng Xu is currently a Staff Data Scientist at Walmart Golbal Tech, focusing on the development and performance improvement of the item page recommendation and personalization models. Before joining WalmartLabs, Jianpeng worked at eBay on deals optimization, timeseries forecasting and anomaly detection for eCommerce metrics. Jianpeng Xu earned his Ph.D in CSE Department, Michigan State University (MSU) in 2017 Summer, under the supervision of <a href="http://www.cse.msu.edu/~ptan/" target="_blank">Dr. Pang-Ning Tan</a>. He received his MS in Computer Science, Harbin Institute of Technology (HIT) in 2010 and BS in Computer Science, Shandong University (SDU) in 2007. Jianpeng has a broad research interest in Data Mining and Machine Learning, which includes GeoSpatio-temporal data mining, anomaly detection, multi-task learning, online learning, and AI algorithms and their applications. He received the <font color="FF0000"> Best Poster Award </font> from Doctoral Forum on SDM 2016 and <font color="FF0000"> Best Paper Award </font> from IEEE BigData 2016. Jianpeng served as Program Committee members for multiple prestigious data mining and machine learning conferences and was invited as reviewers for Journals such as TKDE, TKDD, TNNLS and Pattern Recognition. He served as co-organizers for multiple workshops in recommender systems and information retrieval domains. He is also the Topic Editor for Research Topic on Industrial Recommender Systems, Journal of Frontiers in Big Data. 
       </small>
     </p>
         
@@ -127,7 +127,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	  <b>Recent News:</b><br>
 	  <table>
 	  <tbody>
-    <tr><td valign="top">11/15/2021</td> <td>Jianpeng is serving as the TopiC Editor for the Research Topic on <b>Industrial Recommender Systems, Journal of Frontiers
+    <tr><td valign="top">11/15/2021</td> <td>Jianpeng is serving as the Topic Editor for the Research Topic on <b>Industrial Recommender Systems, Journal of Frontiers
 in Big Data</b>.</td></tr>    
     <tr><td valign="top">11/15/2021</td> <td>Jianpeng has one paper accepted by <b>IEEE BigData 2021</b>.</td></tr>    
     <tr><td valign="top">08/15/2021</td> <td>Jianpeng has one paper accepted by <b>KDD2021</b>.</td></tr>    
@@ -169,6 +169,11 @@ in Big Data</b>.</td></tr>
     <h3>S<small>ELECTED</small> P<small>EER</small>-R<small>EVIEWED </small>P<small>UBLICATIONS</small></h3>
     <small>
     <ol> 
+    <li><i>NEAT: A Label Noise-resistant Complementary Item Recommender System with Trustworthy Evaluation</i><br>
+      Luyi Ma, Jianpeng Xu, Jason H.D. Cho, Evren Korpeoglu, Sushant Kumar, Kannan Achan <br>
+        <b>IEEE BigData2021</b> (<a href="publications/2021-ma-IEEEBigData-NEAT.pdf" target="_blank">Paper</a>)[<a href="" target="_blank">Github</a>]
+    </li>
+
     <li><i>PURE: Positive-Unlabeled Recommendation with Generative Adversarial Network</i><br>
       Yao Zhou, Jianpeng Xu, Jun Wu, Zeinab Taghavi Nasrabadi, Evren Korpeoglu, Kannan Achan, Jingrui He <br>
         <b>KDD2021</b> (<a href="publications/2021-zhou-KDD-PURE.pdf" target="_blank">Paper</a>)[<a href="" target="_blank">Github</a>]
