--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <p>
       <big><b>Dr. Jianpeng Xu</b></big><br>
-      Data Scientist @ Walmart Global Tech (Former WalmartLabs) <br>
+      Senior Manager II, Data Science @ Walmart Global Tech (Former WalmartLabs) <br>
       Personal Email: jianpeng.xu@gmail.com <br>
+      Google Scholar: <a href="https://scholar.google.com/citations?hl=en&user=nLcsaboAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">
       LinkedIn: <a href="http://www.linkedin.com/pub/jianpeng-xu/27/4b4/a39" target="_blank">
       
           <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15.png" width="80" height="15" border="0" alt="View Jianpeng Xu's profile on LinkedIn">
@@ -112,7 +113,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <p>
       <b>Short Biography</b><br>
       <small>
-        Jianpeng Xu is currently a Staff Data Scientist at Walmart Golbal Tech, focusing on the development and performance improvement of the item page recommendation and personalization models. Before joining WalmartLabs, Jianpeng worked at eBay on deals optimization, timeseries forecasting and anomaly detection for eCommerce metrics. Jianpeng Xu earned his Ph.D in CSE Department, Michigan State University (MSU) in 2017 Summer, under the supervision of <a href="http://www.cse.msu.edu/~ptan/" target="_blank">Dr. Pang-Ning Tan</a>. He received his MS in Computer Science, Harbin Institute of Technology (HIT) in 2010 and BS in Computer Science, Shandong University (SDU) in 2007. Jianpeng has a broad research interest in Data Mining and Machine Learning, which includes GeoSpatio-temporal data mining, anomaly detection, multi-task learning, online learning, and AI algorithms and their applications. He received the <font color="FF0000"> Best Poster Award </font> from Doctoral Forum on SDM 2016 and <font color="FF0000"> Best Paper Award </font> from IEEE BigData 2016. Jianpeng served as Program Committee members for multiple prestigious data mining and machine learning conferences and was invited as reviewers for Journals such as TKDE, TKDD, TNNLS and Pattern Recognition. He served as co-organizers for multiple workshops in recommender systems and information retrieval domains. He is also the Topic Editor for Research Topic on Industrial Recommender Systems, Journal of Frontiers in Big Data. 
+        Jianpeng Xu is currently a Senior Manager of Data Science at Walmart Golbal Tech, focusing on the development and improvement of the recommendation and personalization models and products. Before joining WalmartLabs, Jianpeng worked at eBay on deals optimization, timeseries forecasting and anomaly detection for eCommerce metrics. Jianpeng Xu earned his Ph.D in CSE Department, Michigan State University (MSU) in 2017 Summer, under the supervision of <a href="http://www.cse.msu.edu/~ptan/" target="_blank">Dr. Pang-Ning Tan</a>. He received his MS in Computer Science, Harbin Institute of Technology (HIT) in 2010 and BS in Computer Science, Shandong University (SDU) in 2007. Jianpeng has a broad research interest in Data Mining and Machine Learning, which includes GeoSpatio-temporal data mining, anomaly detection, multi-task learning, online learning, and AI algorithms and their applications. He received the <font color="FF0000"> Best Poster Award </font> from Doctoral Forum on SDM 2016 and <font color="FF0000"> Best Paper Award </font> from IEEE BigData 2016. Jianpeng served as Program Committee members for multiple prestigious data mining and machine learning conferences and was invited as reviewers for Journals such as TKDE, TKDD, TNNLS and Pattern Recognition. He served as co-organizers for multiple workshops in recommender systems and information retrieval domains. He is also the Topic Editor for Research Topic on Industrial Recommender Systems, Journal of Frontiers in Big Data. 
       </small>
     </p>
         
@@ -167,6 +168,7 @@ in Big Data</b>.</td></tr>
     <br>
 
     <h3>S<small>ELECTED</small> P<small>EER</small>-R<small>EVIEWED </small>P<small>UBLICATIONS</small></h3>
+	  For complete list, please check my Google Scholar page. 
     <small>
     <ol> 
     <li><i>NEAT: A Label Noise-resistant Complementary Item Recommender System with Trustworthy Evaluation</i><br>
