--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <big><b>Dr. Jianpeng Xu</b></big><br>
       Senior Manager II, Data Science @ Walmart Global Tech (Former WalmartLabs) <br>
       Personal Email: jianpeng.xu@gmail.com <br>
-      Google Scholar: <a href="https://scholar.google.com/citations?hl=en&user=nLcsaboAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">
+      <a href="https://scholar.google.com/citations?hl=en&user=nLcsaboAAAAJ&view_op=list_works&sortby=pubdate" target="_blank"> Google Scholar </a>
       LinkedIn: <a href="http://www.linkedin.com/pub/jianpeng-xu/27/4b4/a39" target="_blank">
       
           <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_liprofile_blue_80x15.png" width="80" height="15" border="0" alt="View Jianpeng Xu's profile on LinkedIn">
